--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
                         <li><a href="#join_the_club">Join the club</a></li>
                         <li><a href="#security">Security</a></li>
                         <li><a href="http://userragscoin.com/" target="_blank"> Buy Now</a></li>
+                        <li><a href="assets/doc/Rags_Policy.pdf" target="_blank"> POLICY</a></li>
                     </ul>
                 </div>
 
