--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                         <li><a href="#security">Security</a></li>
                         <li><a href="http://userragscoin.com/" target="_blank"> Buy Now</a></li>
                         <li><a href="assets/doc/Rags_Policy.pdf" target="_blank"> POLICY</a></li>
-                        <li><a href="assets/doc/Rags_terms.pdf" target="_blank"> RAGS TERMS OF USE</a></li>
+                        <li><a href="assets/doc/Rags_terms.pdf" target="_blank"> RAGS TERMS</a></li>
                     </ul>
                 </div>
 
