--- a/index.html
+++ b/index.html
@@ -358,6 +358,11 @@
                 <li class="card"><a href="#donation">Donation</a></li>
                 <li class="card"><a href="#chart-section">Roadmap</a></li>
                 <li class="card"><a href="#criptocurrency-price-section">How to Buy</a></li>
+                <li><a href="#join_the_club">Join the club</a></li>
+                <li><a href="#security">Security</a></li>
+                <li><a href="http://userragscoin.com/" target="_blank"> Buy Now</a></li>
+                <li><a href="assets/doc/Rags_Policy.pdf" target="_blank"> POLICY</a></li>
+                <li><a href="assets/doc/Rags_terms.pdf" target="_blank"> Terms</a></li>
 
             </ul>
         </div>
