--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                         <li><a href="#join_the_club">Join the club</a></li>
                         <li><a href="#security">Security</a></li>
                         <li><a href="http://userragscoin.com/" target="_blank"> Buy Now</a></li>
-                        <li><a href="assets/doc/Rags_Policy.pdf" target="_blank"> POLICY</a></li>
+                        <li><a href="assets/doc/Rags_Policy.pdf" target="_blank"> Policy</a></li>
                         <li><a href="assets/doc/Rags_terms.pdf" target="_blank"> Terms</a></li>
                     </ul>
                 </div>
@@ -361,7 +361,7 @@
                 <li><a href="#join_the_club">Join the club</a></li>
                 <li><a href="#security">Security</a></li>
                 <li><a href="http://userragscoin.com/" target="_blank"> Buy Now</a></li>
-                <li><a href="assets/doc/Rags_Policy.pdf" target="_blank"> POLICY</a></li>
+                <li><a href="assets/doc/Rags_Policy.pdf" target="_blank"> Policy</a></li>
                 <li><a href="assets/doc/Rags_terms.pdf" target="_blank"> Terms</a></li>
 
             </ul>
